<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test3</string>
    <string name="action_settings">Settings</string>
    <string name="hint_message">hh:mm</string>
        <string name="message1">hh</string>
        <string name="colon">:</string>
            <string name="message2">mm</string>
        
    <string name="default_message">enter time</string>
    <string name="hintmessage">TAP TO CHANGE TIME </string>
    <string name="reminder_message">You will be reminded at 10 mts</string>    
    <string name="start_button">Start</string>
    <string name="button1">Tag</string>
    <string name="button2">Notes</string>
    <string name="button3">Find my car</string>
    <string name="button4">Settings</string>
        
    
    
</resources>
